# yuri2078

./: .gitignore  .gitmodules  README.md  flake.nix
c/: test.c
c++/: test.cpp
c++/cpp/: lambda.cpp  noexcept.cpp  成员函数指针.cpp  默认参数.cpp
c++/cpp/stl-20/: 格式化字符串.cpp
c++/cslg/: 合并排序.cpp  快速排序.cpp
c++/exam/class/: 推排序.cpp  斐波那契数列.cpp
c++/learn/STL/: map.cpp
c++/learn/curl/: main.cpp  request.hpp
c++/os/10.29/: getInfo.cpp  setInfo.cpp
c++/os/11.27/: fork.c  fork.cpp  fork2.cpp
c++/os/12.11/: 时间片  时间片.cpp
c++/prative/yuri/: log.txt  log_test.cpp  main.cpp  test.h  yuri.h  yuri_log.hpp
c++/wayland/: CMakeLists.txt  compile_commands.json  flake.nix  hello.cpp  main copy.cpp  main.cpp
cmake/yuri/: .clang-format  .gitignore  CMakeLists.txt
cmake/yuri/include/: yuri_log.ixx
cmake/yuri/include/utils/: macro.hpp
cmake/yuri/src/: main.cpp
dart/learn/: hello.dart  基础语法.dart
html/: exam.html
java/tools/: createCode.java
kotlin/learn/: 基础语法.kt
leetcode/: 1049.最后一块石头的重量-ii.cpp  121.买卖股票的最佳时机.cpp  122.买卖股票的最佳时机-ii.cpp  123.买卖股票的最佳时机-iii.cpp  125.验证回文串.cpp  162.寻找峰值.cpp  167.两数之和-ii-输入有序数组.cpp  169.多数元素.cpp  189.轮转数组.cpp  205.同构字符串.cpp  216.组合总和-iii.cpp  242.有效的字母异位词.cpp  26.删除有序数组中的重复项.cpp  274.h-指数.cpp  290.单词规律.cpp  309.买卖股票的最佳时机含冷冻期.cpp  31.下一个排列.cpp  322.零钱兑换.cpp  380.o-1-时间插入、删除和获取随机元素.cpp  383.赎金信.cpp  392.判断子序列.cpp  416.分割等和子集.cpp  45.跳跃游戏-ii.cpp  49.字母异位词分组.cpp  54.螺旋矩阵.cpp  55.跳跃游戏.cpp  59.螺旋矩阵-ii.cpp  714.买卖股票的最佳时机含手续费.cpp  76.最小覆盖子串.cpp  77.组合.cpp  80.删除有序数组中的重复项-ii.cpp
notes/markdown/: Android开发基础.md  Apollo指南.md  Avalonia入门指南.md  A星搜索算法.md  CMake集成vcpkg.md  JaveWeb入门.md  Linux内核学习.md  Qt常用类解析.md  Rust入门.md  Wayland入门.md  docker从入门到入土.md  git常用命令.md  grpc从入门到入土.md  hexo.md  hyprland配置教程.md  php.md  python.md  vim语法.md  智慧物流挑战赛.md  机器学习.md  树莓派配置指南.md
notes/xmind/: 及时通信服务.xmind
php/: index.php  test.php
php/html/: ex_1.html
php/learn/: dd.php  ex2-2.php  ex2.php  exam1.php  hello.php  mysql.php
python/: apollo.py  test.py
python/apollo/: get.py  load.py  task_info.py  test.py  test.txt  uuid.py  view.py
python/exam/: cla_2.py  cla_3.py  cla_4_16.py  ex_1.py  ex_2.py  exp_4_6.py  load_excel.py  test.py  京东评论.py
python/exam/test1/: btod.py  dtob.py  gameq.py  hhh.py  learn.py  qiePian.py  test.py
python/exam/test2/: test.py
python/go2x/: caizhuang.py  hufu.py  load.py  money.py  test.py  女香.py  男香.py  香氛.py
python/go2x/dior/: caizhuang.py  hufu.py  money.py  test.py  女香.py  男香.py  香氛.py
python/learn/: with.txt  元组.py  函数.py  列表.py  基础知识.py  字典.py  异常.py  文件.py  类和对象.py  集合.py
python/machine-learning/cslg/: exp1.py  exp2.py
python/machine-learning/knn/: 手写数字识别.py  海伦约会.py  电影鉴定.py
python/pycharm/jd/: config.json  main.py  mainWindow.py
python/pyside6/: test.py
python/pyside6/exam/: LogWidget.py  手写数字识别.py
python/pyside6/learn/: hello.py
python/ros/ros/: dobot.py  init_pos.py  qr图像识别.py  tes2.py  test.py  util.py  前进1.py  图像获取.py  图像识别.py  导航.py  导航测试.py  摄像头图像获取.py  获取位置.py
python/ros/ros_pkg/: catch.py  (+4 more)
python/sem/: angle.py  export.py  load_excel.py  to_entity.py
python/yuri/: load_journal.py  money.py  money.txt  time.py  yuri_log.py  yuri_util.py
shell/: apollo.sh  arch.sh  blue.sh  del.bat
shell/learn/: first.sh  hello.sh  setup.sh  test4.sh  分数检测.sh  复制文件.sh
typescript/: fastboot.sh  test.ts
typescript/learn/: hello.ts  基础知识.ts
vue/init/: package-lock.json  package.json  tailwind.config.js  tailwindcss.css
数据结构和算法/learn/: horspool.cpp  二叉树递归遍历法.c  关键路径-邻接矩阵.cpp  关键路径-邻接表.cpp  哈夫曼树链表.cpp  哈夫曼树顺序存储.c  图-邻接矩阵.cpp  字符串搜索.cpp  快速乘法.cpp  最短路径-邻接矩阵.cpp
数据结构和算法/算法/: a.cpp  b.cpp  lxzh.cpp
服务器开发实践/多进程/: hello.cpp  test.cpp
(+108 files in other folders)
